tests/paczka1/small_fuzzy/10031269.err
Error in line 2: HHsmlK A740 39,0
Error in line 8: iFLBvPi A740 -1,0
